ref: 92828 Fixes alignment issue for label.

--- a/components/financial_assistance/app/assets/stylesheets/financial_assistance/financial_assistance.scss
+++ b/components/financial_assistance/app/assets/stylesheets/financial_assistance/financial_assistance.scss
@@ -375,3 +375,7 @@ div#add-more-link {
 .mt18 {
   margin-top: 18px;
 }
+
+.label-max-width-renew{
+  max-width: 90%;
+}
